<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Puns Game</string>
    <string name="start">START</string>
    <string name="set_timer">SET TIMER</string>
    <string name="puns_game">Puns Game</string>
    <string name="game">GAME</string>
    <string name="random">RANDOM</string>
    <string name="password">Password: </string>
    <string name="category">Category: </string>
    <string name="finish_game_dialog_title">Finish Game !!!</string>
    <string name="finish_game_dialog_message">Do you really want to finish the game ?</string>
    <string name="finish_game_cancel_button">Cancel</string>
    <string name="finish_game_ok_button">OK</string>
    <string name="editor">EDITOR</string>
    <string name="set_timer_in_minutes">Set timer in minutes</string>
    <string name="game_time">Game time:</string>
    <string name="confirm">confirm</string>
    <string name="new_pun_text">pun text</string>
    <string name="edit_delete">Edit/Delete</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="remove_all">Remove all</string>
    <string name="remove_all_message">Do you really want to remove all data ?</string>
</resources>
