<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.puns.punsgame.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:titleTextColor="@color/text_color"
        android:title="@string/puns_game"
        app:navigationIcon="@drawable/arrow_back">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="8sp"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        android:textAlignment="center"
        android:text="@string/category"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category"
        android:layout_margin="8sp"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        android:textAlignment="center"
        android:text="@string/password"/>


    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2_layout"
        android:layout_marginBottom="16sp"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/random_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/custom_button"
            android:textColor="#000000"
            android:background="@color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/button_text_color"
            android:text="@string/random"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button2_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/custom_button"
            android:textColor="#000000"
            android:background="@color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/button_text_color"
            android:text="@string/start"/>
    </RelativeLayout>

</RelativeLayout>
