<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.puns.punsgame.NewPunActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:titleTextColor="@color/text_color"
        android:title="@string/puns_game"
        app:navigationIcon="@drawable/arrow_back">
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/category_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="8sp"
        android:textColor="@color/text_color"
        android:hint="@string/category"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_edit_text"
        android:layout_margin="8sp"
        android:textColor="@color/text_color"
        android:hint="@string/password"/>

    <ListView
        android:id="@+id/new_category_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_text"
        android:background="@color/colorPrimary"
        android:choiceMode="singleChoice"
        android:listSelector="@color/list_selector"
        android:visibility="visible">
    </ListView>


</RelativeLayout>
